# ShArIngM

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  discovery.rs  display.rs  identity.rs  lib.rs  main.rs  models.rs  screen.rs  storage.rs  transfer.rs
