[package]
name = "sharingm"
version = "0.1.0"
description = "Local LAN screen sharing and file transfer"
authors = ["ShArIngM"]
edition = "2021"

[lib]
name = "sharingm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sharingm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hostname = "0.4"
if-addrs = "0.13"
image = "0.24.9"
mdns-sd = "0.13"
rand = "0.8"
screenshots = "0.8.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
